[package]
name = "dababy"
version = "0.2.0"
authors = ["cytoo <akthoamaaa14@gmail.com>"]
readme = "README.md"
description = "a cowsay clone for the dababy"
repository = "https://github.com/cytoo/dababy"
edition = "2018"
license = "MIT OR Apache-2.0"


[dependencies]
structopt = "0.3.21"
colored = "2.0.0"
rodio = "0.13.1"
rand = "0.8.3"
reqwest = { version = "0.11.2", features = ["blocking"] }
